initial cut at moving postgres tasks to separate roles

--- a/roles/maw_postgres/templates/maw-postgres.env.j2
+++ b/roles/maw_postgres/templates/maw-postgres.env.j2
@@ -1,8 +1,8 @@
 # set the postgres password when initializing the container w/ blank db
-POSTGRES_PASSWORD={{ maw__sql_postgres_password }}
+POSTGRES_PASSWORD={{ maw_postgres__password }}
 
 # set the pwd for use in client tooling
-PGPASSWORD={{ maw__sql_postgres_password }}
+PGPASSWORD={{ maw_postgres__password }}
 
 # set the catchall host method in pg_hba.conf (used when first creating container/config)
 POSTGRES_HOST_AUTH_METHOD=scram-sha-256
