first pass at overhauling variable organization (and breaking everything at the same time)

--- a/roles/maw_auth/templates/maw-auth.env.j2
+++ b/roles/maw_auth/templates/maw-auth.env.j2
@@ -4,7 +4,7 @@ GOOGLE_APPLICATION_CREDENTIALS={{ maw_auth__google_email_creds_file }}
 MAW_AUTH_Kestrel__Certificates__Default__Path={{ maw_auth__pfx_auth }}
 MAW_AUTH_Kestrel__Certificates__Default__Password={{ maw_auth__pfx_pwd_auth }}
 
-MAW_AUTH_DataProtection__Path={% if maw_auth__dataprotection_dir | length > 0 %}{{ maw_auth__dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_AUTH_DataProtection__Path={{ maw_auth__dataprotection_dir_for_site }}
 
 MAW_AUTH_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ maw_auth__sql_username }};Password={{ maw_auth__sql_password }}
 MAW_AUTH_Environment__IdsrvDbConnectionString=Server=127.0.0.1;Port=5432;Database=idsrv;Max Auto Prepare=100;User Id={{ maw_auth__sql_username }};Password={{ maw_auth__sql_password }}
