--- a/roles/maw_www/templates/maw-www.env.j2
+++ b/roles/maw_www/templates/maw-www.env.j2
@@ -9,7 +9,7 @@ MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_
 MAW_WWW_AuthConfig__ClientId={{ maw_www__auth_client_id }}
 MAW_WWW_AuthConfig__Secret={{ maw_www__auth_client_secret }}
 
-MAW_WWW_DataProtection__Path={% if maw_www__dataprotection_dir | length > 0 %}{{ maw_www__dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_WWW_DataProtection__Path={{ maw_www__dataprotection_dir_for_site }}
 
 MAW_WWW_GoogleRecaptcha__SiteKey={{ maw_www__google_recaptcha_site_key }}
 MAW_WWW_GoogleRecaptcha__SecretKey={{ maw_www__google_recaptcha_secret_key }}
