first pass at adding in the auth, api, and www sites

--- a/roles/maw_auth/templates/maw-auth.env.j2
+++ b/roles/maw_auth/templates/maw-auth.env.j2
@@ -1,8 +1,8 @@
 ASPNETCORE_ENVIRONMENT={{ maw_auth__aspnet_env }}
 GOOGLE_APPLICATION_CREDENTIALS={{ maw_auth__google_email_creds_file }}
 
-MAW_AUTH_Kestrel__Certificates__Default__Path={{ maw_auth__pfx_auth }}
-MAW_AUTH_Kestrel__Certificates__Default__Password={{ maw_auth__pfx_pwd_auth }}
+MAW_AUTH_Kestrel__Certificates__Default__Path={{ maw_auth__pfx }}
+MAW_AUTH_Kestrel__Certificates__Default__Password={{ maw_auth__pfx_pwd }}
 
 MAW_AUTH_DataProtection__Path={{ maw_auth__dataprotection_dir_for_site }}
 
