--- a/roles/certbot_renew/templates/certbot-renew.service.j2
+++ b/roles/certbot_renew/templates/certbot-renew.service.j2
@@ -3,4 +3,4 @@ Description=Renew Let's Encrypt certificates for mikeandwan.us
 
 [Service]
 Type=oneshot
-ExecStart=podman run -it --rm --pull always --pod {{ cb__pod }} --volume {{ cb__validation_volume }}:/var/www/certbot:rw,z --volume {{ cb__certs_volume }}:/etc/letsencrypt:rw,z {{ cb__container_image }} renew --agree-tos
+ExecStart=podman run -it --rm --pod {{ cb__pod }} --volume {{ cb__validation_volume }}:/var/www/certbot:rw,z --volume {{ cb__certs_volume }}:/etc/letsencrypt:rw,z {{ cb__container_image }} renew --agree-tos
